# lispel

./: .gitignore  AUTHORS  BUGS  Cargo.toml  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  README  README.md  TODO  Version.in  acconfig.h  aclocal.m4  autogen.sh  confdefs.h  config.h.in  config.status  configure  configure.in  install  lispel-config.in  lispel.spec.in  mkinstalldirs  version.h.in
LispelShell/: LispelShellApp.bpr  LispelShellApp.cpp  LispelShellApp.res  ShellForm.cpp  ShellForm.dfm  ShellForm.h
doc/: EMBEDDING.html  GLOSSARY.html  INTERPRETER.html  LANGUAGE.html  index.html  language.md
doc/api/: Makefile  footer.html  footer.html.in  lispel
kdeshell/: LSMainWindow.cpp  LSMainWindow.hh  LispelShell.applnk  LispelShell.cpp  Makefile  setenv.sh
lispel/: Cell.h  Makefile  Makefile.am  Makefile.in  Makefile.mingw32  Makefile.simple  NativeCode.h  context.hh  corecmd.cpp  corecmd.hh  defs.hh  driver.cpp  environment.cpp  environment.hh  evaluator.cpp  evaluator.hh  exception.cpp  exception.hh  filecmd.cpp  filecmd.hh  gc.cpp  gc.hh  hashcmd.cpp  hashcmd.hh  interpreter.cpp  interpreter.hh  iterator.hh  lexer.cpp  lexer.hh  lispel  lispel.hh  lispel.idl  lispel.pro  lispelvm.cpp  lispelvm.hh  listcmd.cpp  listcmd.hh  mathcmd.cpp  mathcmd.hh  nodefactory.cpp  (+19 more)
samples/: 00INDEX
samples/lispel/: counter.scm  primitives.scm
tests/: .cproject  .project  CMakeLists.txt  Makefile  Makefile.in  Makefile.simple  arith0.scm  boosttests.cc  cat.cc  chartypes.cc  checkeval.cc  closure0.scm  empty.scm  environment0.cc  envtests.cpp  eval.cc  factorytests.cpp  gctest0.scm  hello0.scm  interp0.cc  interp1.cc  let0.scm  lexertests.cpp  lispelvmtest.cpp  list0.scm  list1.scm  mathcmdtests.cpp  nil0.cc  nodefactory0.cc  nodefactory1.cc  plus.scm  reader0.cc  relop.scm  runtests.sh  scanner0.cc  string0.tst  string1.tst  string2.tst  test0.scm  test1.scm  (+7 more)
tools/: README
tools/lDoc/: ChangeLog  Makefile  Makefile.am  Makefile.cvs  Makefile.in  README.kde  Version  configure  configure.in  kdocHTML.pm  kdocMan.pm  kdocTeX.pm  ldoc  ldoc.1  ldoc.in  qt2kdoc.1  qt2kdoc.in
tools/lDoc/doc/: CREDITS  example.h  ldoc.html
