dnl ***
dnl *** lscript autoconfiguration template
dnl ***

dnl RCSID: $Id: configure.in,v 1.1.1.1 2001/10/31 15:44:42 michael Exp $
dnl process this file with autoconf to produce a 'configure' script

AC_PREREQ( 2.13)

AC_INIT(lispel/lexer.cpp)
AM_INIT_AUTOMAKE(lscript, 1.0)
AM_CONFIG_HEADER(config.h)

MAJOR_VERSION=0
MINOR_VERSION=0
PICO_VERSION=4
HOMEPAGE=unknown
PACKAGE=lispel

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PICO_VERSION)
AC_SUBST(HOMEPAGE)


dnl CFLAGS=-Wall

LIBTOOL_VERSION=0:0:0
FULL_VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PICO_VERSION
AC_SUBST(FULL_VERSION)


dnl ------------------
dnl Check for programs
dnl ------------------

AC_PROG_CC
AC_ISC_POSIX
AM_PROG_CC_STDC
AC_PROG_CPP
AC_PROG_CXX
dnl AC_PROG_RANLIB

AC_CANONICAL_HOST
AC_CYGWIN
AC_MINGW32

AC_DISABLE_SHARED
AM_PROG_LIBTOOL
AC_PROG_INSTALL

AC_LANG_CPLUSPLUS

AC_EXEEXT
AC_OBJEXT


dnl ---------------------------
dnl Check compiler capabilities
dnl ---------------------------

AC_STDC_HEADERS
AC_C_CONST
AC_C_INLINE
AC_CONST
dnl check if C++ compiler supports bool type

dnl --------------
dnl Library checks
dnl --------------


dnl -------------------------------
dnl Checks for specific C functions
dnl -------------------------------

dnl check for ANSI C++ headers
dnl AM_FUNC_STRTOD
AC_FUNC_VPRINTF

dnl Internationalization macros

dnl Perform variable substitutions
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)


dnl ---------------------
dnl Files to be generated
dnl ---------------------
AC_OUTPUT([
lispel.spec
lispel-config
Version
version.h
Makefile
tests/Makefile
lispel/Makefile
doc/api/footer.html])

